--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
 dist-ssr
 *.local
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Editor directories and files
 .vscode/*
@@ -23,5 +31,23 @@ dist-ssr
 *.sln
 *.sw?
 
+# OS files
+Thumbs.db
+.DS_Store
+
+# Build outputs
+build
+coverage
+.nyc_output
+
+# Testing
+*.test.js.snap
+.jest
+
 # Large files
 *.exe
+
+# Temporary files
+*.tmp
+*.temp
+.cache
